--- a/portfolio.html
+++ b/portfolio.html
@@ -86,10 +86,10 @@
                             <img src="./images/images-portfolio/img-card1-1.jpg" alt="Banking App Interface Concept"
                                 width="360" height="300" />
                             <div class="container-link">
-                                <h2 class="card-list-service link">
+                                <h2 class="card-list-service">
                                     Banking App Interface Concept
                                 </h2>
-                                <p class="card-list-app link">
+                                <p class="card-list-app">
                                     App
                                 </p>
                             </div>
@@ -101,10 +101,10 @@
                                 height="300" />
                             <div class="container-link">
 
-                                <h2 class="card-list-service link">
+                                <h2 class="card-list-service">
                                     Cashless Payment
                                 </h2>
-                                <p class="card-list-app link">
+                                <p class="card-list-app">
                                     Marketing
                                 </p>
                             </div>
@@ -116,10 +116,10 @@
                                 height="300" />
                             <div class="container-link">
 
-                                <h2 class="card-list-service link">
+                                <h2 class="card-list-service">
                                     Meditation App
                                 </h2>
-                                <p class="card-list-app link">
+                                <p class="card-list-app">
                                     App
                                 </p>
                             </div>
@@ -131,10 +131,10 @@
                                 height="300" />
                             <div class="container-link">
 
-                                <h2 class="card-list-service link">
+                                <h2 class="card-list-service">
                                     Taxi Service
                                 </h2>
-                                <p class="card-list-app link">
+                                <p class="card-list-app">
                                     Marketing
                                 </p>
                             </div>
@@ -146,10 +146,10 @@
                                 height="300" />
                             <div class="container-link">
 
-                                <h2 class="card-list-service link">
+                                <h2 class="card-list-service">
                                     Screen Illustrations
                                 </h2>
-                                <p class="card-list-app link">
+                                <p class="card-list-app">
                                     Design
                                 </p>
                             </div>
@@ -161,10 +161,10 @@
                                 height="300" />
                             <div class="container-link">
 
-                                <h2 class="card-list-service link">
+                                <h2 class="card-list-service">
                                     Online Courses
                                 </h2>
-                                <p class="card-list-app link">
+                                <p class="card-list-app">
                                     Marketing
                                 </p>
                             </div>
@@ -176,10 +176,10 @@
                                 width="360" height="300" />
                             <div class="container-link">
 
-                                <h2 class="card-list-service link">
+                                <h2 class="card-list-service">
                                     Instagram Stories Concept
                                 </h2>
-                                <p class="card-list-app link">
+                                <p class="card-list-app">
                                     Design
                                 </p>
                             </div>
@@ -191,10 +191,10 @@
                                 height="300" />
                             <div class="container-link">
 
-                                <h2 class="card-list-service link">
+                                <h2 class="card-list-service">
                                     Organic Food
                                 </h2>
-                                <p class="card-list-app link">
+                                <p class="card-list-app">
                                     Web Site
                                 </p>
                             </div>
@@ -206,10 +206,10 @@
                                 height="300" />
                             <div class="container-link">
 
-                                <h2 class="card-list-service link">
+                                <h2 class="card-list-service">
                                     Fresh Coffee
                                 </h2>
-                                <p class="card-list-app link">
+                                <p class="card-list-app">
                                     Web Site
                                 </p>
                             </div>
