--- a/index.html
+++ b/index.html
@@ -41,50 +41,61 @@
         </div>
     </header>
 
-    <!---------------------------------hero------------------------------------------->
 
     <main class='main'>
+
+
+    <!---------------------------------hero------------------------------------------->
+
 
         <section class='hero'>
             <div class='container'>
                 <h1 class='hero-title'>Effective Solutions for Your Business</h1>
-                <button type='button' class='hero-button'>Order Service</button>
+                <button type='button' data-modal-open='My modal' class='hero-button'>Order Service</button>
             </div>
         </section>
 
-
+<!-- ----------------------------------------advantages------------------------------------ -->
         <section class='advantages'>
             <div class='container'>
                 <h2 class='visually-hidden'>Advantages</h2>
                 <ul class='advantages-list list'>
                     <li class='advantages-list-item list'>
-                            <svg class='header-icons' width='64' height='64'>
+                        <div class='container-icons-1'>
+                            <svg class='advantages-icons'   width='64' height='64'>
                                 <use href='./images/icons.svg#icon-antenna-1'></use>
                             </svg>
+                        </div>
                         <h3 class='advantages-subtitle'>Strategy</h3>
                         <p class='advantages-text'>Our goal is to identify the business
                             problem to walk away with the perfect and creative solution. </p>
                     </li>
                     <li class='advantages-list-item list'>
-                        <svg class='header-icons' width='64' height='64'>
-                            <use href='./images/icons.svg#icon-clock-1'></use>
-                        </svg>
+                        <div class='container-icons-1'>
+                            <svg class='advantages-icons' width='64' height='64'>
+                                <use href='./images/icons.svg#icon-clock-1'></use>
+                            </svg>
+                        </div>
                         <h3 class='advantages-subtitle'>Punctuality</h3>
                         <p class='advantages-text'>Bring the key message to the brand's audience for the best price
                             within the shortest possible time.</p>
                     </li>
                     <li class='advantages-list-item list'>
-                        <svg class='header-icons' width='64' height='64'>
-                            <use href='./images/icons.svg#icon-diagram-1'></use>
-                        </svg>
+                        <div class='container-icons-1'>
+                            <svg class='advantages-icons' width='64' height='64'>
+                                <use href='./images/icons.svg#icon-diagram-1'></use>
+                            </svg>
+                        </div>
                         <h3 class='advantages-subtitle'>Diligence</h3>
                         <p class='advantages-text'>Research and confirm brands that present the strongest digital growth
                             opportunities and minimize risk.</p>
                     </li>
                     <li class='advantages-list-item list'>
-                        <svg class='header-icons' width='64' height='64'>
-                            <use href='./images/icons.svg#icon-astronaut-1'></use>
-                        </svg>
+                        <div class='container-icons-1'>
+                            <svg class='advantages-icons' width='64' height='64'>
+                                <use href='./images/icons.svg#icon-astronaut-1'></use>
+                            </svg>
+                        </div>
                         <h3 class='advantages-subtitle'>Technologies</h3>
                         <p class='advantages-text'>Design practice focused on digital experiences. We bring forth a deep
                             passion for problem-solving.</p>
@@ -92,7 +103,7 @@
                 </ul>
             </div>
         </section>
-
+<!-- ---------------------------------------------made----------------------------------- -->
         <section class='made'>
             <div class='container'>
                 <h2 class='made-title'>What are we doing</h2>
@@ -109,9 +120,7 @@
                 </ul>
             </div>
         </section>
-
-
-
+<!-- _--------------------------------------------team------------------------------- -->
         <section class='team'>
             <div class='container'>
                 <h2 class='team-title'>Our Team</h2>
@@ -147,7 +156,6 @@
                 </ul>
             </div>
         </section>
-
     </main>
     <!-- ----------------------------footer main---------------------- -->
 
@@ -158,6 +166,7 @@
                 growth solutions.</p>
         </div>
     </footer>
+    <script></script>
 </body>
 
 </html>
