--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main class='main'>
 
 
-    <!---------------------------------hero------------------------------------------->
+        <!---------------------------------hero------------------------------------------->
 
 
         <section class='hero'>
@@ -55,15 +55,15 @@
             </div>
         </section>
 
-<!-- ----------------------------------------advantages------------------------------------ -->
+        <!-- ----------------------------------------advantages------------------------------------ -->
         <section class='advantages'>
             <div class='container'>
                 <h2 class='visually-hidden'>Advantages</h2>
                 <ul class='advantages-list list'>
                     <li class='advantages-list-item list'>
                         <div class='container-icons-1'>
-                            <svg class='advantages-icons'   width='64' height='64'>
-                                <use href='./images/icons.svg#icon-antenna-1'></use>
+                            <svg class='advantages-icons' width='64' height='64'>
+                                <use href='./images/icons.svg#icon-antenna-1-1'></use>
                             </svg>
                         </div>
                         <h3 class='advantages-subtitle'>Strategy</h3>
@@ -103,7 +103,7 @@
                 </ul>
             </div>
         </section>
-<!-- ---------------------------------------------made----------------------------------- -->
+        <!-- ---------------------------------------------made----------------------------------- -->
         <section class='made'>
             <div class='container'>
                 <h2 class='made-title'>What are we doing</h2>
@@ -120,7 +120,7 @@
                 </ul>
             </div>
         </section>
-<!-- _--------------------------------------------team------------------------------- -->
+        <!-- _--------------------------------------------team------------------------------- -->
         <section class='team'>
             <div class='container'>
                 <h2 class='team-title'>Our Team</h2>
@@ -130,6 +130,36 @@
                         <div class='team-list-text'>
                             <h3 class='team-list-name'>Mark Guerrero</h3>
                             <p class='team-list-profession'>Product Designer</p>
+                            <ul class='team-socials-list'>
+                                <li class='team-socials-item'>
+                                    <a href="" class='team-socials-link'>
+                                        <svg class='team-icons' width='16' height='16'>
+                                            <use href='./images/icons.svg#icon-instagram-2-1'></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class='team-socials-item'>
+                                    <a href="" class='team-socials-link'>
+                                        <svg class='team-icons' width='16' height='16'>
+                                            <use href='./images/icons.svg#icon-twitter-1'></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class='team-socials-item'>
+                                    <a href="" class='team-socials-link'>
+                                        <svg class='team-icons' width='16' height='16'>
+                                            <use href='./images/icons.svg#icon-facebook-1-1'></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class='team-socials-item'>
+                                    <a href="" class='team-socials-link'>
+                                        <svg class='team-icons' width='16' height='16'>
+                                            <use href='./images/icons.svg#icon-linkedin-1-1'></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class='team-list-item list'>
@@ -137,6 +167,36 @@
                         <div class='team-list-text'>
                             <h3 class='team-list-name'>Tom Ford</h3>
                             <p class='team-list-profession'>Frontend Developer</p>
+                            <ul class='team-socials-list'>
+                                <li class='team-socials-item'>
+                                    <a href="" class='team-socials-link'>
+                                        <svg class='team-icons' width='16' height='16'>
+                                            <use href='./images/icons.svg#icon-instagram-2-1'></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class='team-socials-item'>
+                                    <a href="" class='team-socials-link'>
+                                        <svg class='team-icons' width='16' height='16'>
+                                            <use href='./images/icons.svg#icon-twitter-1'></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class='team-socials-item'>
+                                    <a href="" class='team-socials-link'>
+                                        <svg class='team-icons' width='16' height='16'>
+                                            <use href='./images/icons.svg#icon-facebook-1-1'></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class='team-socials-item'>
+                                    <a href="" class='team-socials-link'>
+                                        <svg class='team-icons' width='16' height='16'>
+                                            <use href='./images/icons.svg#icon-linkedin-1-1'></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class='team-list-item list'>
@@ -144,6 +204,36 @@
                         <div class='team-list-text'>
                             <h3 class='team-list-name'>Camila Garcia</h3>
                             <p class='team-list-profession'>Marketing</p>
+                            <ul class='team-socials-list'>
+                                <li class='team-socials-item'>
+                                    <a href="" class='team-socials-link'>
+                                        <svg class='team-icons' width='16' height='16'>
+                                            <use href='./images/icons.svg#icon-instagram-2-1'></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class='team-socials-item'>
+                                    <a href="" class='team-socials-link'>
+                                        <svg class='team-icons' width='16' height='16'>
+                                            <use href='./images/icons.svg#icon-twitter-1'></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class='team-socials-item'>
+                                    <a href="" class='team-socials-link'>
+                                        <svg class='team-icons' width='16' height='16'>
+                                            <use href='./images/icons.svg#icon-facebook-1-1'></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class='team-socials-item'>
+                                    <a href="" class='team-socials-link'>
+                                        <svg class='team-icons' width='16' height='16'>
+                                            <use href='./images/icons.svg#icon-linkedin-1-1'></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class='team-list-item list'>
@@ -151,7 +241,87 @@
                         <div class='team-list-text'>
                             <h3 class='team-list-name'>Daniel Wilson</h3>
                             <p class='team-list-profession'>UI Designer</p>
+                            <ul class='team-socials-list'>
+                                <li class='team-socials-item'>
+                                    <a href="" class='team-socials-link'>
+                                        <svg class='team-icons' width='16' height='16'>
+                                            <use href='./images/icons.svg#icon-instagram-2-1'></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class='team-socials-item'>
+                                    <a href="" class='team-socials-link'>
+                                        <svg class='team-icons' width='16' height='16'>
+                                            <use href='./images/icons.svg#icon-twitter-1'></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class='team-socials-item'>
+                                    <a href="" class='team-socials-link'>
+                                        <svg class='team-icons' width='16' height='16'>
+                                            <use href='./images/icons.svg#icon-facebook-1-1'></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class='team-socials-item'>
+                                    <a href="" class='team-socials-link'>
+                                        <svg class='team-icons' width='16' height='16'>
+                                            <use href='./images/icons.svg#icon-linkedin-1-1'></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!-- --------------------------------------------------customers------------------------------- -->
+        <section class='customers'>
+            <div class='container'>
+                <h2 class='customers-title'>Customers</h2>
+                <ul class='customers-list'>
+                    <li class='customers-list-item'>
+                        <a href="" class='customers-list-link'>
+                            <svg class='customers-icons' width='104' height='56'>
+                                <use href='./images/icons.svg#icon-Logo'></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class='customers-list-item'>
+                        <a href="" class='customers-list-link'>
+                            <svg class='customers-icons' width='104' height='56'>
+                                <use href='./images/icons.svg#icon-Logo-1'></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class='customers-list-item'>
+                        <a href="" class='customers-list-link'>
+                            <svg class='customers-icons' width='104' height='56'>
+                                <use href='./images/icons.svg#icon-Logo-2'></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class='customers-list-item'>
+                        <a href="" class='customers-list-link'>
+                            <svg class='customers-icons' width='104' height='56'>
+                                <use href='./images/icons.svg#icon-Vector-1'></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class='customers-list-item'>
+                        <a href="" class='customers-list-link'>
+                            <svg class='customers-icons' width='104' height='56'>
+                                <use href='./images/icons.svg#icon-Logo-3'></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class='customers-list-item'>
+                        <a href="" class='customers-list-link'>
+                            <svg class='customers-icons' width='104' height='56'>
+                                <use href='./images/icons.svg#icon-Logo-4'></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -161,12 +331,47 @@
 
     <footer class='footer'>
         <div class='container footer-container'>
-            <a class='footer-logo link' href="./index.html">Web<span class="footer-logo-f">Studio</span></a>
-            <p class='footer-text'>Increase the flow of customers and sales for your business with digital marketing &
-                growth solutions.</p>
+            <div class='footer-container-logo-text'>
+                <a class='footer-logo link' href="./index.html">Web<span class="footer-logo-f">Studio</span></a>
+                <p class='footer-text'>Increase the flow of customers and sales for your business with digital marketing
+                    & growth solutions.</p>
+            </div>
+            <div class='footer-container-socials'>
+                <p class='footer-socials'>Social media</p>
+                <ul class='footer-socials-list'>
+                    <li class='footer-socials-item'>
+                        <a href="" class='footer-list-link'>
+                            <svg class='footer-icons' width='24' height='24'>
+                                <use href='./images/icons.svg#icon-instagram-2-1'></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class='footer-socials-item'>
+                        <a href="" class='footer-list-link'>
+                            <svg class='footer-icons' width='24' height='24'>
+                                <use href='./images/icons.svg#icon-twitter-1'></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class='footer-socials-item'>
+                        <a href="" class='footer-list-link'>
+                            <svg class='footer-icons' width='24' height='24'>
+                                <use href='./images/icons.svg#icon-facebook-1-1'></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class='footer-socials-item'>
+                        <a href="" class='footer-list-link'>
+                            <svg class='footer-icons' width='24' height='24'>
+                                <use href='./images/icons.svg#icon-linkedin-1-1'></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
-    <script></script>
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
