--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h2 class='visually-hidden'>Advantages</h2>
                 <ul class='advantages-list list'>
                     <li class='advantages-list-item list'>
-                        <div class='container-icons-1'>
+                        <div class='advantages-container-icons'>
                             <svg class='advantages-icons' width='64' height='64'>
                                 <use href='./images/icons.svg#icon-antenna-1-1'></use>
                             </svg>
@@ -71,7 +71,7 @@
                             problem to walk away with the perfect and creative solution. </p>
                     </li>
                     <li class='advantages-list-item list'>
-                        <div class='container-icons-1'>
+                        <div class='advantages-container-icons'>
                             <svg class='advantages-icons' width='64' height='64'>
                                 <use href='./images/icons.svg#icon-clock-1'></use>
                             </svg>
@@ -81,7 +81,7 @@
                             within the shortest possible time.</p>
                     </li>
                     <li class='advantages-list-item list'>
-                        <div class='container-icons-1'>
+                        <div class='advantages-container-icons'>
                             <svg class='advantages-icons' width='64' height='64'>
                                 <use href='./images/icons.svg#icon-diagram-1'></use>
                             </svg>
@@ -91,7 +91,7 @@
                             opportunities and minimize risk.</p>
                     </li>
                     <li class='advantages-list-item list'>
-                        <div class='container-icons-1'>
+                        <div class='advantages-container-icons'>
                             <svg class='advantages-icons' width='64' height='64'>
                                 <use href='./images/icons.svg#icon-astronaut-1'></use>
                             </svg>
@@ -131,28 +131,28 @@
                             <h3 class='team-list-name'>Mark Guerrero</h3>
                             <p class='team-list-profession'>Product Designer</p>
                             <ul class='team-socials-list'>
-                                <li class='team-socials-item'>
+                                <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
                                             <use href='./images/icons.svg#icon-instagram-2-1'></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class='team-socials-item'>
+                                <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
                                             <use href='./images/icons.svg#icon-twitter-1'></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class='team-socials-item'>
+                                <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
                                             <use href='./images/icons.svg#icon-facebook-1-1'></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class='team-socials-item'>
+                                <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
                                             <use href='./images/icons.svg#icon-linkedin-1-1'></use>
@@ -168,28 +168,28 @@
                             <h3 class='team-list-name'>Tom Ford</h3>
                             <p class='team-list-profession'>Frontend Developer</p>
                             <ul class='team-socials-list'>
-                                <li class='team-socials-item'>
+                                <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
                                             <use href='./images/icons.svg#icon-instagram-2-1'></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class='team-socials-item'>
+                                <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
                                             <use href='./images/icons.svg#icon-twitter-1'></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class='team-socials-item'>
+                                <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
                                             <use href='./images/icons.svg#icon-facebook-1-1'></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class='team-socials-item'>
+                                <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
                                             <use href='./images/icons.svg#icon-linkedin-1-1'></use>
@@ -205,28 +205,28 @@
                             <h3 class='team-list-name'>Camila Garcia</h3>
                             <p class='team-list-profession'>Marketing</p>
                             <ul class='team-socials-list'>
-                                <li class='team-socials-item'>
+                                <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
                                             <use href='./images/icons.svg#icon-instagram-2-1'></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class='team-socials-item'>
+                                <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
                                             <use href='./images/icons.svg#icon-twitter-1'></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class='team-socials-item'>
+                                <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
                                             <use href='./images/icons.svg#icon-facebook-1-1'></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class='team-socials-item'>
+                                <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
                                             <use href='./images/icons.svg#icon-linkedin-1-1'></use>
@@ -241,29 +241,29 @@
                         <div class='team-list-text'>
                             <h3 class='team-list-name'>Daniel Wilson</h3>
                             <p class='team-list-profession'>UI Designer</p>
-                            <ul class='team-socials-list'>
-                                <li class='team-socials-item'>
+                            <ul class='team-socials-list list'>
+                                <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
                                             <use href='./images/icons.svg#icon-instagram-2-1'></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class='team-socials-item'>
+                                <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
                                             <use href='./images/icons.svg#icon-twitter-1'></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class='team-socials-item'>
+                                <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
                                             <use href='./images/icons.svg#icon-facebook-1-1'></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class='team-socials-item'>
+                                <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
                                             <use href='./images/icons.svg#icon-linkedin-1-1'></use>
@@ -281,42 +281,42 @@
             <div class='container'>
                 <h2 class='customers-title'>Customers</h2>
                 <ul class='customers-list'>
-                    <li class='customers-list-item'>
+                    <li class='customers-list-item list'>
                         <a href="" class='customers-list-link'>
                             <svg class='customers-icons' width='104' height='56'>
                                 <use href='./images/icons.svg#icon-Logo'></use>
                             </svg>
                         </a>
                     </li>
-                    <li class='customers-list-item'>
+                    <li class='customers-list-item list'>
                         <a href="" class='customers-list-link'>
                             <svg class='customers-icons' width='104' height='56'>
                                 <use href='./images/icons.svg#icon-Logo-1'></use>
                             </svg>
                         </a>
                     </li>
-                    <li class='customers-list-item'>
+                    <li class='customers-list-item list'>
                         <a href="" class='customers-list-link'>
                             <svg class='customers-icons' width='104' height='56'>
                                 <use href='./images/icons.svg#icon-Logo-2'></use>
                             </svg>
                         </a>
                     </li>
-                    <li class='customers-list-item'>
+                    <li class='customers-list-item list'>
                         <a href="" class='customers-list-link'>
                             <svg class='customers-icons' width='104' height='56'>
                                 <use href='./images/icons.svg#icon-Vector-1'></use>
                             </svg>
                         </a>
                     </li>
-                    <li class='customers-list-item'>
+                    <li class='customers-list-item list'>
                         <a href="" class='customers-list-link'>
                             <svg class='customers-icons' width='104' height='56'>
                                 <use href='./images/icons.svg#icon-Logo-3'></use>
                             </svg>
                         </a>
                     </li>
-                    <li class='customers-list-item'>
+                    <li class='customers-list-item list'>
                         <a href="" class='customers-list-link'>
                             <svg class='customers-icons' width='104' height='56'>
                                 <use href='./images/icons.svg#icon-Logo-4'></use>
@@ -339,28 +339,28 @@
             <div class='footer-container-socials'>
                 <p class='footer-socials'>Social media</p>
                 <ul class='footer-socials-list'>
-                    <li class='footer-socials-item'>
+                    <li class='footer-socials-item list'>
                         <a href="" class='footer-list-link'>
                             <svg class='footer-icons' width='24' height='24'>
                                 <use href='./images/icons.svg#icon-instagram-2-1'></use>
                             </svg>
                         </a>
                     </li>
-                    <li class='footer-socials-item'>
+                    <li class='footer-socials-item list'>
                         <a href="" class='footer-list-link'>
                             <svg class='footer-icons' width='24' height='24'>
                                 <use href='./images/icons.svg#icon-twitter-1'></use>
                             </svg>
                         </a>
                     </li>
-                    <li class='footer-socials-item'>
+                    <li class='footer-socials-item list'>
                         <a href="" class='footer-list-link'>
                             <svg class='footer-icons' width='24' height='24'>
                                 <use href='./images/icons.svg#icon-facebook-1-1'></use>
                             </svg>
                         </a>
                     </li>
-                    <li class='footer-socials-item'>
+                    <li class='footer-socials-item list'>
                         <a href="" class='footer-list-link'>
                             <svg class='footer-icons' width='24' height='24'>
                                 <use href='./images/icons.svg#icon-linkedin-1-1'></use>
@@ -371,6 +371,15 @@
             </div>
         </div>
     </footer>
+    <div data-modal class='modal' class='is-hidden'>
+        <div class='modal-window'>
+            <button type='button' data-modal-close="My modal" class='modal-button'>
+                <svg class='modal-button-icons' width='8' height='8'>
+                    <use href='./images/icons.svg#Ellipse 1'></use>
+                </svg>
+            </button>
+        </div>
+    </div>
     <script src="./js/modal.js"></script>
 </body>
 
