--- a/portfolio.html
+++ b/portfolio.html
@@ -53,27 +53,27 @@
                     Main filters
                 </h1>
                 <ul class="list-button list">
-                    <li>
+                    <li class='list-button-item'>
                         <button type="button" class="filter-button">
                             All
                         </button>
                     </li>
-                    <li>
+                    <li class='list-button-item'>
                         <button type="button" class="filter-button">
                             Web Site
                         </button>
                     </li>
-                    <li>
+                    <li class='list-button-item'>
                         <button type="button" class="filter-button">
                             App
                         </button>
                     </li>
-                    <li>
+                    <li class='list-button-item'>
                         <button type="button" class="filter-button">
                             Design
                         </button>
                     </li>
-                    <li>
+                    <li class='list-button-item'>
                         <button type="button" class="filter-button">
                             Marketing
                         </button>
@@ -83,8 +83,10 @@
                 <ul class="card-list list">
                     <li class="card-list-item link">
                         <a class="portfolio-link link" href="">
-                            <img src="./images/images-portfolio/img-card1-1.jpg" alt="Banking App Interface Concept"
-                                width="360" height="300" />
+                            <div class='card-images'>
+                                <img src="./images/images-portfolio/img-card1-1.jpg" alt="Banking App Interface Concept" width="360" height="300" />
+                            <p class='card-text'>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
+                            </div>
                             <div class="container-link">
                                 <h2 class="card-list-service">
                                     Banking App Interface Concept
@@ -97,10 +99,11 @@
                     </li>
                     <li class="card-list-item link">
                         <a href="" class="portfolio-link link">
-                            <img src="./images/images-portfolio/img-card2-1.jpg" alt="Cashless Payment" width="360"
-                                height="300" />
+                            <div class='card-images'>
+                                <img src="./images/images-portfolio/img-card1-1.jpg" alt="Banking App Interface Concept" height="300" />
+                            <p class='card-text'> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="container-link">
-
                                 <h2 class="card-list-service">
                                     Cashless Payment
                                 </h2>
@@ -112,10 +115,12 @@
                     </li>
                     <li class="card-list-item link">
                         <a href="" class="portfolio-link link">
-                            <img src="./images/images-portfolio/img-card3-1.jpg" alt="Meditaion App" width="360"
+                            <div class='card-images'>
+                                <img src="./images/images-portfolio/img-card3-1.jpg" alt="Meditaion App" width="360"
                                 height="300" />
+                            <p class='card-text'>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
+                            </div>                            
                             <div class="container-link">
-
                                 <h2 class="card-list-service">
                                     Meditation App
                                 </h2>
@@ -127,10 +132,12 @@
                     </li>
                     <li class="card-list-item link">
                         <a href="" class="portfolio-link link">
-                            <img src="./images/images-portfolio/img-card1-2.jpg" alt="Taxi Service" width="360"
+                            <div class='card-images'>
+                                <img src="./images/images-portfolio/img-card1-2.jpg" alt="Taxi Service" width="360"
                                 height="300" />
+                            <p class='card-text'> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>                            
                             <div class="container-link">
-
                                 <h2 class="card-list-service">
                                     Taxi Service
                                 </h2>
@@ -142,10 +149,12 @@
                     </li>
                     <li class="card-list-item link">
                         <a href="" class="portfolio-link link">
-                            <img src="./images/images-portfolio/img-card2-2.jpg" alt="Screen Illustrations" width="360"
+                            <div class='card-images'>
+                                <img src="./images/images-portfolio/img-card2-2.jpg" alt="Screen Illustrations" width="360"
                                 height="300" />
+                            <p class='card-text'>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
+                            </div>                            
                             <div class="container-link">
-
                                 <h2 class="card-list-service">
                                     Screen Illustrations
                                 </h2>
@@ -157,10 +166,12 @@
                     </li>
                     <li class="card-list-item link">
                         <a href="" class="portfolio-link link">
-                            <img src="./images/images-portfolio/img-card3-2.jpg" alt="Online Courses" width="360"
+                            <div class='card-images'>
+                                <img src="./images/images-portfolio/img-card3-2.jpg" alt="Online Courses" width="360"
                                 height="300" />
+                            <p class='card-text'>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
+                            </div>
                             <div class="container-link">
-
                                 <h2 class="card-list-service">
                                     Online Courses
                                 </h2>
@@ -172,10 +183,12 @@
                     </li>
                     <li class="card-list-item link">
                         <a href="" class="portfolio-link link">
-                            <img src="./images/images-portfolio/img-card1-3.jpg" alt="Instagram Stories Concept"
+                            <div class='card-images'>
+                                <img src="./images/images-portfolio/img-card1-3.jpg" alt="Instagram Stories Concept"
                                 width="360" height="300" />
+                            <p class='card-text'>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
+                            </div>                            
                             <div class="container-link">
-
                                 <h2 class="card-list-service">
                                     Instagram Stories Concept
                                 </h2>
@@ -187,10 +200,12 @@
                     </li>
                     <li class="card-list-item link">
                         <a href="" class="portfolio-link link">
-                            <img src="./images/images-portfolio/img-card2-3.jpg" alt="Organic Food" width="360"
+                            <div class='card-images'>
+                                <img src="./images/images-portfolio/img-card2-3.jpg" alt="Organic Food" width="360"
                                 height="300" />
+                            <p class='card-text'>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
+                            </div>                           
                             <div class="container-link">
-
                                 <h2 class="card-list-service">
                                     Organic Food
                                 </h2>
@@ -202,10 +217,12 @@
                     </li>
                     <li class="card-list-item link">
                         <a href="" class="portfolio-link link">
-                            <img src="./images/images-portfolio/img-card3-3.jpg" alt="Fresh Coffee" width="360"
+                            <div class='card-images'>
+                                <img src="./images/images-portfolio/img-card3-3.jpg" alt="Fresh Coffee" width="360"
                                 height="300" />
+                            <p class='card-text'> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>                           
                             <div class="container-link">
-
                                 <h2 class="card-list-service">
                                     Fresh Coffee
                                 </h2>
@@ -221,16 +238,58 @@
     </main>
 
     <!-- --------------------------------footer--------------------------------- -->
-    <footer class="footer">
-        <div class="container footer-container">
-            <a class="footer-logo link" href="./index.html">Web<span class="footer-logo-f">Studio</span></a>
-            <p class="footer-text">
-                Increase the flow of customers and sales
-                for your business with digital marketing
-                & growth solutions.
-            </p>
+    <footer class='footer'>
+        <div class='container footer-container'>
+            <div class='footer-container-logo-text'>
+                <a class='footer-logo link' href="./index.html">Web<span class="footer-logo-f">Studio</span></a>
+                <p class='footer-text'>Increase the flow of customers and sales for your business with digital marketing
+                    & growth solutions.</p>
+            </div>
+            <div class='footer-container-socials'>
+                <p class='footer-socials'>Social media</p>
+                <ul class='footer-socials-list'>
+                    <li class='footer-socials-item list'>
+                        <a href="" class='footer-list-link'>
+                            <svg class='footer-icons' width='24' height='24'>
+                                <use href='./images/icons.svg#icon-instagram-2-1'></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class='footer-socials-item list'>
+                        <a href="" class='footer-list-link'>
+                            <svg class='footer-icons' width='24' height='24'>
+                                <use href='./images/icons.svg#icon-twitter-1'></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class='footer-socials-item list'>
+                        <a href="" class='footer-list-link'>
+                            <svg class='footer-icons' width='24' height='24'>
+                                <use href='./images/icons.svg#icon-facebook-1-1'></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class='footer-socials-item list'>
+                        <a href="" class='footer-list-link'>
+                            <svg class='footer-icons' width='24' height='24'>
+                                <use href='./images/icons.svg#icon-linkedin-1-1'></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
+    <div data-modal class='modal' class='is-hidden'>
+        <div class='modal-window'>
+            <button type='button' data-modal-close="My modal" class='modal-button'>
+                <svg class='modal-button-icons' width='8' height='8'>
+                    <use href='./images/icons.svg#Ellipse 1'></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
