--- a/index.html
+++ b/index.html
@@ -371,7 +371,9 @@
             </div>
         </div>
     </footer>
-    <div data-modal class='modal' class='is-hidden'>
+    
+    <script src="./js/modal.js">
+<div data-modal class='modal' class='is-hidden'>
         <div class='modal-window'>
             <button type='button' data-modal-close="My modal" class='modal-button'>
                 <svg class='modal-button-icons' width='8' height='8'>
@@ -380,7 +382,7 @@
             </button>
         </div>
     </div>
-    <script src="./js/modal.js"></script>
+    </script>
 </body>
 
 </html>
