--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
                     </li>
                 </ul>
             </nav>
-            <address class="address">
+            <addres class="address">
                 <ul class="header-address list">
                     <li class="header-address-item list">
                         <a class="header-address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -42,7 +42,7 @@
                         <a class="header-address-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
-            </address>
+            </addres
         </div>
     </header>
     <!----------------------------main----------------------------------------->
