--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                         <div class='team-list-text'>
                             <h3 class='team-list-name'>Daniel Wilson</h3>
                             <p class='team-list-profession'>UI Designer</p>
-                            <ul class='team-socials-list list'>
+                            <ul class='team-socials-list'>
                                 <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
@@ -372,7 +372,6 @@
         </div>
     </footer>
     
-    <script src="./js/modal.js">
 <div data-modal class='modal' class='is-hidden'>
         <div class='modal-window'>
             <button type='button' data-modal-close="My modal" class='modal-button'>
@@ -382,7 +381,7 @@
             </button>
         </div>
     </div>
-    </script>
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
