--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav class='header-navigation'>
                 <a class='header-logo link' href="./index.html">Web<span class="header-logo-f">Studio</span></a>
                 <ul class='header-menu list'>
-                    <li class='header-menu-item list'><a class="header-menu-link link" href="./index.html">Studio</a>
+                    <li class='header-menu-item list'><a class="header-menu-link link underline" href="./index.html">Studio</a>
                     </li>
                     <li class='header-menu-item list'><a class="header-menu-link link"
                             href="./portfolio.html">Portfolio</a></li>
@@ -371,8 +371,8 @@
             </div>
         </div>
     </footer>
-    
-<div data-modal class='modal' class='is-hidden'>
+    <!-- -------------------------------------modal----------------------- -->
+<div data-modal class='modal is-hidden'>
         <div class='modal-window'>
             <button type='button' data-modal-close="My modal" class='modal-button'>
                 <svg class='modal-button-icons' width='8' height='8'>
