--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
                         <a class="header-menu-link link" href="./index.html">Studio</a>
                     </li>
                     <li class="header-menu-item list">
-                        <a class="header-menu-link link" href="./portfolio.html">Portfolio</a>
+                        <a class="header-menu-link link underline" href="./portfolio.html">Portfolio</a>
                     </li>
                     <li class="header-menu-item list">
                         <a class="header-menu-link link" href="">Contacts</a>
